--- a/PunterosEvaluacionMoral/PunterosEvaluacionMoral.vcxproj.filters
+++ b/PunterosEvaluacionMoral/PunterosEvaluacionMoral.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="PunterosEvaluacionMoral.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="punteros.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="moralEvualuation.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
